<resources>
    <!--Application-->
    <string name="app_name">Goldline</string>

    <!--Tags-->
    <string name="tag_item_fragment">ITEM_FRAGMENT</string>

    <!--Text-->
    <string name="text_add_item">Add Item</string>
    <string name="text_batteries">Batteries</string>
    <string name="text_brand">Brand</string>
    <string name="text_capacity">Capacity</string>
    <string name="text_country">Country</string>
    <string name="text_delete">Delete</string>
    <string name="text_item_details">Item Details</string>
    <string name="text_make">Make</string>
    <string name="text_minus">-</string>
    <string name="text_plus">+</string>
    <string name="text_settings">Settings</string>
    <string name="text_size">Size</string>
    <string name="text_stocks">Stocks</string>
    <string name="text_tubes">Tubes</string>
    <string name="text_tyres">Tyres</string>
    <string name="text_warranty">Warranty (Y)</string>

    <!--Search Hints-->
    <string name="hint_search">Search</string>

    <!--Alert messages-->
    <string name="alert_negative_stocks">Stocks should be greater than 0</string>
    <string name="text_confirmation">Are you sure?</string>
    <string name="item_update_success">Item Updated Successfully</string>
    <string name="text_item_delete_confirmation">Do you really want to delete this record?</string>
    <string name="text_item_delete_success">Item Removed Successfully</string>
    <string name="text_item_delete_failure">Item Could not be Removed</string>
    <string name="lock_unlock">Lock/Unlock</string>
    <string name="password_prompt">Please enter your password</string>
    <string name="password">Password</string>
    <string name="str_locked">Locked</string>

</resources>
